Testing changes on new branch

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   1 Spring St, New Brunswick, NJ</br>
 </p></br>
 
-<p> Page and lab under construction! </p>
+<p> Testing testing! </p>
 
 <h4>Events</h4>
 
