Updated to new version

--- a/schedule.html
+++ b/schedule.html
@@ -37,43 +37,11 @@
 
 
     <div style="min-height:500px">
-        <p>Welcome to the home of computational and mathematical linguistics at Rutgers! We work on the theory of computation as it applies to linguistic cognition and learning.</p>
+        <h3> Lab Meetings</h3> 
 
-        <p><b>Lab director:</b> <a href="http://adamjardine.net">Adam Jardine</a> (Rutgers Department of Linguistics)</p>
-
-        <hr>
-
-        <h4>Students</h4>
-        <table>
-            <tr>
-                <td>
-	                  <ul>
-	                      <li>Eileen Blum</li>
-	                      <li>Yu Cao</li>
-                        <li>Huteng Dai</li>
-                        <li>Wenyue Hua</li>
-	                  </ul>
-                </td>
-                <td>
-	                  <ul>
-	                      <li>Nathan Koser</li>
-	                      <li>Dine Mamadou</li>
-	                      <li>Christopher Oakden</li>
-	                  </ul>
-                </td>
-            </tr>
-        </table>
-
-        <!-- <h4>Undergrads</h4>-->
-
-        <hr>
-
-        <h4>Events</h4>
-
-        <ul>
-            <li>We recently took a trip to Stony Brook to attend <a href="https://outde.xyz/2019-04-21/computational-phonology-workshop-3.html#computational-phonology-workshop-3">Computational Phonology Workshop 3</a>.</li>
-            <li>In 2018 we hosted the <a href="workshop.html">Second Rutgers Computational Phonology Workshop</a></li>
-        </ul>
+        <p>
+        <b> Summer 2019: </b> Time & place TBD!
+        </p>
 
     </div>
 
