Added student website links

--- a/index.html
+++ b/index.html
@@ -48,17 +48,17 @@
             <tr>
                 <td>
 	                  <ul>
-	                      <li>Eileen Blum</li>
-	                      <li>Yu Cao</li>
-                        <li>Huteng Dai</li>
+	                      <li><a href="https://www.eileenrblum.com/">Eileen Blum</a></li>
+	                      <li><a href="https://pterosdiacos.github.io">Yu Cao</a></li>
+                        <li><a href="http://hutengdai.com/">Huteng Dai</a></li>
                         <li>Wenyue Hua</li>
 	                  </ul>
                 </td>
                 <td>
 	                  <ul>
-	                      <li>Nathan Koser</li>
-	                      <li>Dine Mamadou</li>
-	                      <li>Christopher Oakden</li>
+	                      <li><a href="https://nate-koser.github.io/">Nathan Koser</a></li>
+	                      <li><a href="https://dinemamadou.wixsite.com/dinemamadou">Dine Mamadou</a></li>
+	                      <li><a href="https://coakden.github.io/">Christopher Oakden</a></li>
 	                  </ul>
                 </td>
             </tr>
