--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                 </td>
                 <td>
 	                  <ul>
+                        <li>Shiori Ikawa</li>
 	                      <li><a href="https://nate-koser.github.io/">Nathan Koser</a></li>
 	                      <li><a href="https://dinemamadou.wixsite.com/dinemamadou">Dine Mamadou</a></li>
 	                      <li><a href="https://coakden.github.io/">Christopher Oakden</a></li>
