Added summer 19 schedule

--- a/schedule.html
+++ b/schedule.html
@@ -40,7 +40,11 @@
         <h3> Lab Meetings</h3> 
 
         <p>
-        <b> Summer 2019: </b> Time & place TBD!
+            <b> Summer 2019: </b>
+            <ul>
+                <li>  Wednesdays, 3-5pm, 1 Spring Rm 204</li>
+                <li>  First meeting: Wed, June 5</li>
+                    
         </p>
 
     </div>
