--- a/schedule.html
+++ b/schedule.html
@@ -42,8 +42,9 @@
         <p>
             <b> Summer 2019: </b>
             <ul>
-                <li>  Wednesdays, 3-5pm, 1 Spring Rm 204</li>
+                <li>  Wednesdays, 3-5pm, 1 Spring <del>Rm 204</del> <b>Rm 404</b> (from July 10)</li>
                 <li>  First meeting: Wed, June 5</li>
+                <li>  Lab meeting <b>cancelled on July 3</b></li>
                     
         </p>
 
