--- a/schedule.html
+++ b/schedule.html
@@ -43,8 +43,7 @@
             <b> Summer 2019: </b>
             <ul>
                 <li>  Wednesdays, 3-5pm, 1 Spring <del>Rm 204</del> <b>Rm 404</b> (from July 10)</li>
-                <li>  First meeting: Wed, June 5</li>
-                <li>  Lab meeting <b>cancelled on July 3</b></li>
+                <li>  <b>July 10 meeting moved to Friday, July 12</b>. Group meeting will be in <b>Rm 204</b>.</li> 
                     
         </p>
 
