--- a/schedule.html
+++ b/schedule.html
@@ -42,9 +42,14 @@
         <p>
             <b> Summer 2019: </b>
             <ul>
-                <li>  Wednesdays, 3-5pm, 1 Spring <del>Rm 204</del> <b>Rm 404</b> (from July 10)</li>
-                <li>  <b>July 10 meeting moved to Friday, July 12</b>. Group meeting will be in <b>Rm 204</b>.</li> 
-                    
+                <li> Wednesdays, 3-5pm, 1 Spring <del>Rm 204</del> <b>Rm 404</b> (from July 10)</li>
+                <li> <b>July 10 meeting moved to Friday, July 12</b>. Group meeting will be in <b>Rm 204</b>.</li>
+                <li> <b>July 17 meeing moved to the morning</b>
+                    <ul>
+                        <li>Individual meetings on the same schedule, but <b>start at 10am</b></li>
+                        <li><b>Group meeting is cancelled</b></li>
+                    </ul>
+                </li>
         </p>
 
     </div>
