--- a/schedule.html
+++ b/schedule.html
@@ -26,6 +26,7 @@
         <li><a href="https://github.com/rucll">Lab Github</a></li>
         <li><a href="schedule.html">Lab meetings</a></li>
         <li><a href="https://sites.rutgers.edu/lgsa/reading-groups/mathling/">Math ling group</a></li>
+        <li><a href="https://drive.google.com/drive/folders/18gkxZX8r3mxqQbNKsb91zqjKsebCc4rz?usp=sharing">Lab Drive <span style="font-family:Trebuchet,sans-serif;font-size:90%">(members only)</span></a></li>
         <!--<li><a href="events.html">Events</a></li> -->
     </ul>
 
@@ -56,7 +57,7 @@
 
 
 <p class="footer">
-    Last updated: Jun 28 2019<br>
+    Last updated: Jul 13 2019<br>
 </p>
 </body>
 </html>
