--- a/schedule.html
+++ b/schedule.html
@@ -51,6 +51,7 @@
                         <li><b>Group meeting is cancelled</b></li>
                     </ul>
                 </li>
+                <li> Normal schedule resumes July 24. </li>
         </p>
 
     </div>
