--- a/schedule.html
+++ b/schedule.html
@@ -43,7 +43,7 @@
         <p>
             <b> Summer 2019: </b>
             <ul>
-                <li> Wednesdays, 3-5pm, 1 Spring <del>Rm 204</del> <b>Rm 404</b> (from July 10)</li>
+                <li> Wednesdays, 3-5pm, 1 Spring <b>Rm 204</b> (from July 10)</li>
                 <li> <b>July 10 meeting moved to Friday, July 12</b>. Group meeting will be in <b>Rm 204</b>.</li>
                 <li> <b>July 17 meeing moved to the morning</b>
                     <ul>
@@ -52,6 +52,7 @@
                     </ul>
                 </li>
                 <li> Normal schedule resumes July 24. </li>
+                <li> Group meeting back in <b>Rm 204</b> starting August 7</li>.
         </p>
 
     </div>
