--- a/mathling/index.html
+++ b/mathling/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="author" content="Adam Jardine">
-  <title>Rutgers Computational Linguistics Lab</title>
+  <title>Rutgers MathLing Group </title>
   <style type="text/css">code{white-space: pre;}</style>
   <!--[if lt IE 9]>
     <script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -24,8 +24,7 @@
 
     <!-- Group description -->
     <div style="min-height:500px">
-        <p>An informal reading group for mathematical and computational linguistics discussions.</p>
-        <p>We are affiliated with the <a href="https://ling.rutgers.edu/">Rutgers Department of Linguistics</a> and the <a href="https://rucll.github.io/">Rutgers Computational Linguistics Lab</a>.</p>
+        <p>This is an informal reading group for mathematical and computational linguistics discussions. We are affiliated with the <a href="https://ling.rutgers.edu/">Rutgers Department of Linguistics</a> and the <a href="https://rucll.github.io/">Rutgers Computational Linguistics Lab</a>.</p>
         <table>
             <tr>
                 <td><b>Faculty advisor:</b></td>
