--- a/schedule.html
+++ b/schedule.html
@@ -41,6 +41,13 @@
         <h3> Lab Meetings</h3> 
 
         <p>
+            <b> Fall 2019: </b>
+            <ul>
+                <li> Wednesdays, 11:30am-12:30pm, 1 Spring Rm 204</li>
+                <li> First meeting Sep. 4th</li>
+            </ul>
+        </p>
+        <p>
             <b> Summer 2019: </b>
             <ul>
                 <li> Wednesdays, 3-5pm, 1 Spring <b>Rm 204</b> (from July 10)</li>
@@ -53,6 +60,7 @@
                 </li>
                 <li> Normal schedule resumes July 24. </li>
                 <li> Group meeting back in <b>Rm 204</b> starting August 7</li>.
+            </ul>
         </p>
 
     </div>
