--- a/schedule.html
+++ b/schedule.html
@@ -25,7 +25,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="https://github.com/rucll">Lab Github</a></li>
         <li><a href="schedule.html">Lab meetings</a></li>
-        <li><a href="https://sites.rutgers.edu/lgsa/reading-groups/mathling/">Math ling group</a></li>
+        <li><a href="mathling/">Math ling group</a></li>
         <li><a href="https://drive.google.com/drive/folders/18gkxZX8r3mxqQbNKsb91zqjKsebCc4rz?usp=sharing">Lab Drive <span style="font-family:Trebuchet,sans-serif;font-size:90%">(members only)</span></a></li>
         <!--<li><a href="events.html">Events</a></li> -->
     </ul>
