--- a/mathling/index.html
+++ b/mathling/index.html
@@ -43,7 +43,7 @@
         <!-- News/etc -->
         <h3>Welcome To Our Newest Members!</h3>
 
-        <p>Our Computational and Mathematical Linguistics family is growing with our newest members <b>Natasha Chemey</b> and <b>Tatevik Yolyan </b>(find their bios <a href="https://sites.rutgers.edu/lgsa/meet-our-new-grad-students-2019/">here</a>). Welcome! and here&#8217;s to a lot of MathLing fun this academic year!</p>
+        <p>Our Computational and Mathematical Linguistics family is growing with our newest graduate members <b>Natasha Chemey</b> and <b>Tatevik Yolyan </b>(find their bios <a href="https://sites.rutgers.edu/lgsa/meet-our-new-grad-students-2019/">here</a>), and to our faculty member <b>Adam McCollum </b>(find their bios <a href="http://idiom.ucsd.edu/~agmccoll/">here</a>). Welcome! and here&#8217;s to a lot of MathLing fun this academic year!</p>
 
         <hr>
 
