--- a/mathling/index.html
+++ b/mathling/index.html
@@ -12,7 +12,7 @@
   <meta name="description" content="Rutgers Mathling Group">
   <meta name="keywords" content="linguistics,Rutgers,phonology,syntax,semantics,mathematical linguistics,computational linguistics">
   <link href='https://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
-  <link href="https://fonts.googleapis.com/css?family=Raleway:800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Raleway:800&display=swap" rel="stylesheet"> 
 </head>
 
 <body style="margin: 3% 25% 5% 15%">
@@ -28,7 +28,7 @@
         <table>
             <tr>
                 <td><b>Faculty advisor:</b></td>
-                <td><a href="http://adamjardine.net">Adam Jardine</a></td>
+                <td><a href="http://adamjardine.net">Adam Jardine</a></td> 
             </tr>
             <tr>
                 <td><b>Student organizer:</b></td>
@@ -43,10 +43,13 @@
         <!-- News/etc -->
         <h3>Welcome To Our Newest Members!</h3>
 
-        <p>Our Computational and Mathematical Linguistics family is growing with our newest graduate members <b>Natasha Chemey</b> and <b>Tatevik Yolyan </b>(find their bios <a href="https://sites.rutgers.edu/lgsa/meet-our-new-grad-students-2019/">here</a>), and to our faculty member <b>Adam McCollum </b>(find their bios <a href="http://idiom.ucsd.edu/~agmccoll/">here</a>). Welcome! and here&#8217;s to a lot of MathLing fun this academic year!</p>
+        <p>Our Computational and Mathematical Linguistics family is growing with our newest graduate members <b>Natasha Chemey</b> and <b>Tatevik Yolyan </b>(find their bios <a href="https://sites.rutgers.edu/lgsa/meet-our-new-grad-students-2019/">here</a>), and faculty member <b>Adam McCollum </b>(find his personal website <a href="http://idiom.ucsd.edu/~agmccoll/">here</a>). Welcome! and here&#8217;s to a lot of MathLing fun this academic year!</p>
 
         <hr>
 
+        <p><b>Upcoming Meeting </b>: Fall Meeting 1
+<p>This meeting will be in room 412 from 11:30am to 12:30am  at 1 Spring St, New Brunswick, NJ and will consist of informal presentations of several ongoing research projects, by graduate students.</p>
+      
         <p><b>Spring 2019 Meeting 1</b>: Learning substitutable languages</p>
 <p>In this meeting, we will continue the discussion on learning started last semester. The relevant reading for the meeting is Clark and Eyraud (2007) on learning substitutable languages, which can learn non-regular languages that can model some aspects of syntactic structure.<br />
 All are welcome!</p>
