--- a/mathling/index.html
+++ b/mathling/index.html
@@ -47,8 +47,8 @@
 
         <hr>
 
-        <p><b>Upcoming Meeting </b>: Fall Meeting 1
-<p>This meeting will be in room 412 from 11:30am to 12:30am  at 1 Spring St, New Brunswick, NJ and will consist of informal presentations of several ongoing research projects, by graduate students.</p>
+        <p><b>Upcoming Meeting </b>: Fall Meeting 1 (Wed, Sep 4th)
+<p>This meeting will be in room 412 from 11:30am to 12:30am at 1 Spring St, New Brunswick, NJ on Wednesday, September 4th and will consist of informal presentations of several ongoing graduate research projects.</p>
       
         <p><b>Spring 2019 Meeting 1</b>: Learning substitutable languages</p>
 <p>In this meeting, we will continue the discussion on learning started last semester. The relevant reading for the meeting is Clark and Eyraud (2007) on learning substitutable languages, which can learn non-regular languages that can model some aspects of syntactic structure.<br />
