edited rm # etc

--- a/mathling/index.html
+++ b/mathling/index.html
@@ -48,8 +48,14 @@
         <hr>
 
         <p><b>Upcoming Meeting </b>: Fall Meeting 1 (Wed, Sep 4th)
-<p>This meeting will be in room 412 from 11:30am to 12:30am at 1 Spring St, New Brunswick, NJ on Wednesday, September 4th and will consist of informal presentations of several ongoing graduate research projects.</p>
-      
+            <p>This meeting will be in room 204 from 11:30am to 12:30am at 1 Spring St, New Brunswick, NJ on Wednesday, September 4th.</p>
+            <p>MathLing this semester will be merged with our computational linguistics lab meetings, meaning that the meetings will be even more informal than usual, with one or more of us giving updates on our research              (instead of reading and discussing papers).</p>
+            <p>This week, Adam will present on multitape automata, and everyone will get a chance to share what they're working on.</p>
+
+        <hr>
+
+        <h3>Previous meetings</h3>
+
         <p><b>Spring 2019 Meeting 1</b>: Learning substitutable languages</p>
 <p>In this meeting, we will continue the discussion on learning started last semester. The relevant reading for the meeting is Clark and Eyraud (2007) on learning substitutable languages, which can learn non-regular languages that can model some aspects of syntactic structure.<br />
 All are welcome!</p>
