--- a/mathling/index.html
+++ b/mathling/index.html
@@ -32,7 +32,7 @@
             </tr>
             <tr>
                 <td><b>Student organizer:</b></td>
-                <td> <a href="https://dinemamadou.wixsite.com/dinemamadou">Dine Mamadou</a></td>
+                <td> <a href="https://dinemamadou.wixsite.com/dinemamadou">Dine Mamadou</a></td> and
                 <td> <a href="https://ling.rutgers.edu/people-mainmenu-137/graduate-students-mainmenu-149">Huteng Dai</a></td>
 
             </tr>
