--- a/mathling/index.html
+++ b/mathling/index.html
@@ -32,8 +32,8 @@
             </tr>
             <tr>
                 <td><b>Student organizer:</b></td>
-                <td> <a href="https://dinemamadou.wixsite.com/dinemamadou">Dine Mamadou</a></td> and
-                <p> <a href="https://ling.rutgers.edu/people-mainmenu-137/graduate-students-mainmenu-149">Huteng Dai</a></td>
+                <td> <a href="https://dinemamadou.wixsite.com/dinemamadou">Dine Mamadou</a> and </td> 
+                <td> <a href="https://ling.rutgers.edu/people-mainmenu-137/graduate-students-mainmenu-149">Huteng Dai</a></td>
 
             </tr>
         </table>
