added necphon link to index

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
         <h4>Events</h4>
 
         <ul>
+            <li>We'll be hosting <a href="necphon2019/index.html">NECPhon 2019</a> on Nov 16</li>
             <li>Adam will be presenting with Jane Chandlee at <a href="http://www.cs.toronto.edu/mol2019/">MoL 2019</a></li>
             <li>We recently took a trip to Stony Brook to attend <a href="https://outde.xyz/2019-04-21/computational-phonology-workshop-3.html#computational-phonology-workshop-3">Computational Phonology Workshop 3</a>.</li>
             <li>In 2018 we hosted the <a href="workshop.html">Second Rutgers Computational Phonology Workshop</a></li>
@@ -82,7 +83,7 @@
 
 
 <p class="footer">
-    Last updated: Jul 13 2019<br>
+    Last updated: Oct 20 2019<br>
 </p>
 </body>
 </html>
