--- a/necphon2019/index.html
+++ b/necphon2019/index.html
@@ -35,8 +35,22 @@
 
 <h3>Schedule</h3>
 
+<p>11:00 Lunch</p>
+<p>More detailed schedule TBA</p>
 
-<p>TBA</p>
+<h3>Accomodations</h3>
+
+<p>
+    For crash space for grads, please contact Dine Mamadou (dine.mamadou (at) rutgers.edu).
+</p>
+
+<p>
+    There are two hotels close to campus, but they are on the expensive side:
+    <ul>
+        <li><a href="https://www.theheldrich.com/">The Heldrich</a></li>
+        <li><a href="https://www.hyatt.com/en-US/hotel/new-jersey/hyatt-regency-new-brunswick/ewrrn?src=corp_lclb_gmb_seo_nam_ewrrn">Hyatt Regency New Brunswick</a></li>
+    </ul>
+</p>
 
 <h3>Parking</h3>
 
@@ -68,7 +82,7 @@
 <br/>
 -->
 <p class="footer">
-Last updated: Oct 20 2019<br>
+Last updated: Oct 21 2019<br>
 </p>
 </body>
 </html>
