--- a/necphon2019/index.html
+++ b/necphon2019/index.html
@@ -35,8 +35,112 @@
 
 <h3>Schedule</h3>
 
-<p>11:00 Lunch</p>
-<p>More detailed schedule TBA</p>
+<table id="t01">
+  <tr>
+    <th>Time</th>
+    <th>Speakers</th> 
+    <th>University</th>
+    <th>Title</th>
+
+  </tr>
+  <tr>
+    <td>11:00--11:55</td>
+    <td>Opening Remarks</td>
+    <td></td>
+    <td></td>
+
+  </tr>
+  <tr>
+    <td>12:00--12:30</td>
+    <td>Jon Rawski</td>
+    <td>SBU</td>
+    <td>TBA</td>
+  </tr>
+  <tr>
+    <td>12:30--13:00</td>
+    <td>Wenyue Hua, Huteng Dai, & Adam Jardine</td>
+    <td>Rutgers</td>
+    <td>Subregular Learning of a Phonology and a Set of Underlying Forms</td>
+  </tr>
+  <tr>
+    <td>13:00--13:15</td>
+    <td>Break</td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>13:15--13:45</td>
+    <td>Kyle Gorman</td>
+    <td>CUNY</td>
+    <td>Weird Inflects but OK: Making Sense of Morphological Generation Errors</td>
+  </tr>
+  <tr>
+    <td>13:45--14:15</td>
+    <td>Craig Thorburn, Naomi Feldman, and Schatz</td>
+    <td>UMD</td>
+    <td>A Quantitative Model of the Language Familiarity Effect</td>
+  </tr>
+  <tr>
+    <td>14:15--14:30</td>
+    <td>Break</td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>14:30--15:00</td>
+    <td>Chris Yang and Kevin Ellis</td>
+    <td>MIT</td>
+    <td>TBA</td>
+  </tr>
+  <tr>
+    <td>15:00--15:30</td>
+    <td>Ryan Budnick</td>
+    <td>UPenn</td>
+    <td>Word Segmentation as a Filter on Learnable Stress Systems</td>
+  </tr>
+  <tr>
+    <td>15:30--16:00</td>
+    <td>Cassidy Henry & Naomi Feldman</td>
+    <td>UMD</td>
+    <td>Evaluating Cross-Linguistic Harmonicity Across Multiple Features</td>
+  </tr>
+  <tr>
+    <td>16:00--16:15</td>
+    <td>Break</td>
+    <td></td>
+    <td>Break</td>
+  </tr>
+  <tr>
+    <td>16:15--16:45</td>
+    <td>Spencer Caplan</td>
+    <td>UPenn</td>
+    <td>Now You Hear Me, Later You Don't: The Markovian Nature of Phonological Categorization</td>
+  </tr>
+  <tr>
+    <td>16:45--17:15</td>
+    <td>Chris Oakden</td>
+    <td>Rutgers</td>
+    <td>Modelling Phonological Processes with Recursive Programs Schemes</td>
+  </tr>
+  <tr>
+    <td>17:15--17:45</td>
+    <td>TBA</td>
+    <td>UMass</td>
+    <td>TBA</td>
+  </tr>
+  <tr>
+    <td>17:45--18:00</td>
+    <td>Closing Remarks and Bus. Meeting</td>
+    <td></td>
+    <td></td>
+  </tr>
+    <tr>
+    <td>18:00--</td>
+    <td>Dinner(informal)</td>
+    <td></td>
+    <td></td>
+  </tr>
+</table>
 
 <h3>Accomodations</h3>
 
