--- a/necphon2019/index.html
+++ b/necphon2019/index.html
@@ -37,7 +37,7 @@
 
 <table id="t01">
   <tr>
-    <th>Talk Time</th>
+    <th>Time</th/>
     <th>Speakers</th> 
     <th>University</th>
     <th>Title</th>
