--- a/necphon2019/index.html
+++ b/necphon2019/index.html
@@ -37,14 +37,21 @@
 
 <table id="t01">
   <tr>
-    <th>Time</th/>
+    <th>Time</th>
     <th>Speakers</th> 
     <th>University</th>
     <th>Title</th>
 
   </tr>
-  <tr>
+    <tr>
     <td>11:00-11:55</td>
+    <td>Lunch outside Room 1170</td>
+    <td></td>
+    <td></td>
+
+  </tr>
+  <tr>
+    <td>11:55-12:00</td>
     <td>Opening Remarks</td>
     <td></td>
     <td></td>
