--- a/necphon2019/index.html
+++ b/necphon2019/index.html
@@ -60,7 +60,7 @@
   <tr>
     <td>12:00</td>
     <td>Jon Rawski</td>
-    <td>SBU</td>
+    <td>Stony Brook</td>
     <td>TBA</td>
   </tr>
   <tr>
@@ -131,9 +131,9 @@
   </tr>
   <tr>
     <td>17:15</td>
-    <td>TBA</td>
+    <td>Andrew Lamont</td>
     <td>UMass</td>
-    <td>TBA</td>
+    <td>Nasal cluster dissimilation and tier-based strict locality</td>
   </tr>
   <tr>
     <td>17:45</td>
