added abstract page

--- a/necphon2019/index.html
+++ b/necphon2019/index.html
@@ -80,6 +80,7 @@
     <td>Kyle Gorman</td>
     <td>CUNY</td>
     <td>Weird Inflects but OK: Making Sense of Morphological Generation Errors</td>
+    <td>[<a href="abstracts.html#cuny">abstract</a>]</td>
   </tr>
   <tr>
     <td>13:45</td>
