small schedule edit

--- a/necphon2019/index.html
+++ b/necphon2019/index.html
@@ -138,7 +138,7 @@
   </tr>
   <tr>
     <td>17:45</td>
-    <td>Closing Remarks and Bus. Meeting</td>
+    <td>Closing Remarks and Business Meeting</td>
     <td></td>
     <td></td>
   </tr>
