small schedule edit

--- a/necphon2019/index.html
+++ b/necphon2019/index.html
@@ -126,8 +126,8 @@
   </tr>
   <tr>
     <td>16:45</td>
-    <td>Chris Oakden</td>
-    <td>Rutgers</td>
+    <td>Chris Oakden, Adam Jardine, and Jane Chandlee</td>
+    <td>Rutgers/Haverford</td>
     <td>Modelling Phonological Processes with Recursive Programs Schemes</td>
   </tr>
   <tr>
