added mit talk title

--- a/necphon2019/index.html
+++ b/necphon2019/index.html
@@ -98,7 +98,7 @@
     <td>14:30</td>
     <td>Chris Yang and Kevin Ellis</td>
     <td>MIT</td>
-    <td>TBA</td>
+    <td>On the effect of UR learning on the acquisition of phonological interactions</td>
   </tr>
   <tr>
     <td>15:00</td>
