--- a/necphon2019/index.html
+++ b/necphon2019/index.html
@@ -67,7 +67,8 @@
     <td>12:30</td>
     <td>Wenyue Hua, Huteng Dai, & Adam Jardine</td>
     <td>Rutgers</td>
-    <td>Subregular Learning of a Phonology and a Set of Underlying Forms</td>
+    <td>Subregular Learning of a Phonology and a Set of Underlying Forms</td> 
+    [<a href="files/urlearning.pdf">manuscript</a>]
   </tr>
   <tr>
     <td>13:00</td>
@@ -80,13 +81,13 @@
     <td>Kyle Gorman</td>
     <td>CUNY</td>
     <td>Weird Inflects but OK: Making Sense of Morphological Generation Errors</td>
-    <td>[<a href="abstracts.html#cuny">abstract</a>]</td>
+    <td>[<a href="abstracts.html#cuny">abstract</a>][<a href="https://docs.google.com/presentation/d/1Ke2a3BgAw4Bm-hJlz04YtpQw9bCFqiIa5pqRruA9sAo/edit#slide=id.g63b88e1d19_1_81">slides</a>]</td>
   </tr>
   <tr>
     <td>13:45</td>
     <td>Craig Thorburn, Naomi Feldman, and Schatz</td>
     <td>UMD</td>
-    <td>A Quantitative Model of the Language Familiarity Effect</td>
+    <td>A Quantitative Model of the Language Familiarity Effect</td> 
   </tr>
   <tr>
     <td>14:15</td>
