--- a/necphon2019/index.html
+++ b/necphon2019/index.html
@@ -68,7 +68,7 @@
     <td>Wenyue Hua, Huteng Dai, & Adam Jardine</td>
     <td>Rutgers</td>
     <td>Subregular Learning of a Phonology and a Set of Underlying Forms</td> 
-    <td>[<a href="slides:urlearning#rutgers.pdf">slides</a>]</td>
+    <td>[<a href="slides-urlearning#rutgers.pdf">slides</a>]</td>
   </tr>
   <tr>
     <td>13:00</td>
