--- a/necphon2019/index.html
+++ b/necphon2019/index.html
@@ -124,6 +124,7 @@
     <td>Spencer Caplan</td>
     <td>UPenn</td>
     <td>Now You Hear Me, Later You Don't: The Markovian Nature of Phonological Categorization</td>
+    <td>[<a href="Caplan_ILC_VOT_Necphon.pdf#upenn">slides</a>]</td>
   </tr>
   <tr>
     <td>16:45</td>
