--- a/necphon2019/index.html
+++ b/necphon2019/index.html
@@ -131,6 +131,7 @@
     <td>Chris Oakden, Adam Jardine, and Jane Chandlee</td>
     <td>Rutgers/Haverford</td>
     <td>Modelling Phonological Processes with Recursive Programs Schemes</td>
+    <td>[<a href="BMRS.pdf#rutgers">slides</a>]</td> 
   </tr>
   <tr>
     <td>17:15</td>
