--- a/necphon2019/index.html
+++ b/necphon2019/index.html
@@ -100,6 +100,7 @@
     <td>Chris Yang and Kevin Ellis</td>
     <td>MIT</td>
     <td>On the effect of UR learning on the acquisition of phonological interactions</td>
+    <td>[<a href="https://docs.google.com/presentation/d/1tqB7VzxP6lvuJZK8rpKAjHsFg6ss2JNqbAbOHxpmJl0/edit#slide=id.p">slides</a>]</td>
   </tr>
   <tr>
     <td>15:00</td>
