--- a/necphon2019/index.html
+++ b/necphon2019/index.html
@@ -107,6 +107,7 @@
     <td>Ryan Budnick</td>
     <td>UPenn</td>
     <td>Word Segmentation as a Filter on Learnable Stress Systems</td>
+    <td>[<a href="Word segmentation as a filter on learnable stress systems.pdf#upenn">slides</a>]
   </tr>
   <tr>
     <td>15:30</td>
