--- a/necphon2019/index.html
+++ b/necphon2019/index.html
@@ -88,6 +88,7 @@
     <td>Craig Thorburn, Naomi Feldman, and Schatz</td>
     <td>UMD</td>
     <td>A Quantitative Model of the Language Familiarity Effect</td> 
+    <td>[<a href="NECPhon_ LFE_11_15_PDF.pptx#">slides</a>][<a href="NECPhon_ LFE_11_15_PDF.pdf#">pdf</a>]</td>
   </tr>
   <tr>
     <td>14:15</td>
