--- a/necphon2019/index.html
+++ b/necphon2019/index.html
@@ -88,7 +88,7 @@
     <td>Craig Thorburn, Naomi Feldman, and Schatz</td>
     <td>UMD</td>
     <td>A Quantitative Model of the Language Familiarity Effect</td> 
-    <td>[<a href="NECPhon_ LFE_11_15_PDF.pptx#">slides</a>][<a href="NECPhon_ LFE_11_15_PDF.pdf#">pdf</a>]</td>
+    <td>[<a href="NECPhon_ LFE_11_15_PDF.pptx#UMD">slides</a>][<a href="NECPhon_ LFE_11_15_PDF.pdf#UMD">pdf</a>]</td>
   </tr>
   <tr>
     <td>14:15</td>
@@ -108,7 +108,7 @@
     <td>Ryan Budnick</td>
     <td>UPenn</td>
     <td>Word Segmentation as a Filter on Learnable Stress Systems</td>
-    <td>[<a href="Word segmentation as a filter on learnable stress systems.pdf#upenn">slides</a>]
+    <td>[<a href="Word segmentation as a filter on learnable stress systems.pptx#upenn">slides</a>]
   </tr>
   <tr>
     <td>15:30</td>
