--- a/necphon2019/index.html
+++ b/necphon2019/index.html
@@ -88,7 +88,7 @@
     <td>Craig Thorburn, Naomi Feldman, and Schatz</td>
     <td>UMD</td>
     <td>A Quantitative Model of the Language Familiarity Effect</td> 
-    <td>[<a href="NECPhon_UMD.pptx#UMD">slides</a>][<a href="NECPhon_UMD.pdf#UMD">pdf</a>]</td>
+    <td>[<a href="NECPhon_UMD.pptx#UMD">slides</a>][<a href="NECPhon_UMD.pdf">pdf</a>]</td>
   </tr>
   <tr>
     <td>14:15</td>
