--- a/necphon2019/index.html
+++ b/necphon2019/index.html
@@ -62,6 +62,7 @@
     <td>Jon Rawski</td>
     <td>Stony Brook</td>
     <td>Tensor Product Representations of Subregular Constraints</td>
+    <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
   </tr>
   <tr>
     <td>12:30</td>
