--- a/necphon2019/index.html
+++ b/necphon2019/index.html
@@ -142,7 +142,7 @@
     <td>Andrew Lamont</td>
     <td>UMass</td>
     <td>Nasal cluster dissimilation and tier-based strict locality</td>
-    <td>[<a href="Lamont_NECPhon-2019-handout.pdf">slides</a>]</td>
+    <td>[<a href="Lamont_NECPhon-2019-handout.pdf">handout</a>]</td>
   </tr>
   <tr>
     <td>17:45</td>
