--- a/mathling/index.html
+++ b/mathling/index.html
@@ -49,11 +49,11 @@
 
         <hr>
 
-        <p><b>Upcoming Meeting </b>: Fall Meeting 1 (Wed, Sep 4th)
-            <p>This meeting will be in room 204 from 11:30am to 12:30am at 1 Spring St, New Brunswick, NJ on Wednesday, September 4th.</p>
-            <p>MathLing this semester will be merged with our computational linguistics lab meetings, meaning that the meetings will be even more informal than usual, with one or more of us giving updates on our research              (instead of reading and discussing papers).</p>
-            <p>This week, Adam will present on multitape automata, and everyone will get a chance to share what they're working on.</p>
-
+        <h3>Upcoming meetings</h3>
+        <p><b>Spring 2020 Meeting 1: The outlook and import of mathematical linguistics</b>
+            <p>To begin the semester with a review of the outlook and import of mathematical linguistics, Adam J. will summarize Jeff Heinz's recent talk at the Society for Computation in Linguistics on mathematical linguistics in the 21st century (slides available here)</p>
+            <p>This semester our MathLing meetings will be on Thursdays from 1:30pm to 2:30pm. Our first meeting is this Thursday, January 23rd, 2020 in Room 108.</p> 
+        
         <hr>
 
         <h3>Previous meetings</h3>
