--- a/mathling/index.html
+++ b/mathling/index.html
@@ -62,7 +62,7 @@
             <p>MathLing this semester will be merged with our computational linguistics lab meetings, meaning that the meetings will be even more informal than usual, with one or more of us giving updates on our research              (instead of reading and discussing papers).</p>
             <p>This week, Adam will present on multitape automata, and everyone will get a chance to share what they're working on.</p>
       
-        <p><b>Spring 2019 Meeting </b>: Learning substitutable languages</p>
+        <p><b>Spring 2019 Meeting 1 </b>: Learning substitutable languages</p>
             <p>In this meeting, we will continue the discussion on learning started last semester. The relevant reading for the meeting is Clark and Eyraud (2007) on learning substitutable languages, which can learn non-regular languages that can model some aspects of syntactic structure.<br />
                 All are welcome!</p>
 <p><b>             <em>Date &amp; Time:</em> </b>Feb. 15, 2019 at 10am</p>
