--- a/mathling/index.html
+++ b/mathling/index.html
@@ -51,7 +51,7 @@
 
         <h3>Upcoming meetings</h3>
         <p><b>Spring 2020 Meeting 1: The outlook and import of mathematical linguistics</b>
-            <p>To begin the semester with a review of the outlook and import of mathematical linguistics, Adam J. will summarize Jeff Heinz's recent talk at the Society for Computation in Linguistics on mathematical linguistics in the 21st century (slides available here)</p>
+            <p>To begin the semester with a review of the outlook and import of mathematical linguistics, Adam J. will summarize Jeff Heinz's recent talk at the Society for Computation in Linguistics on mathematical linguistics in the 21st century (slides available <a href="http://jeffreyheinz.net/talks/Heinz-2020-ML21C-slides.pdf">here</a>)</p>
             <p>This semester our MathLing meetings will be on Thursdays from 1:30pm to 2:30pm. Our first meeting is this Thursday, January 23rd, 2020 in Room 108.</p> 
         
         <hr>
