--- a/mathling/index.html
+++ b/mathling/index.html
@@ -52,8 +52,10 @@
         <h3>Upcoming meetings</h3>
         <p><b>Spring 2020 Meeting 1: The outlook and import of mathematical linguistics</b>
             <p>To begin the semester with a review of the outlook and import of mathematical linguistics, Adam J. will summarize Jeff Heinz's recent talk at the Society for Computation in Linguistics on mathematical linguistics in the 21st century (slides available <a href="http://jeffreyheinz.net/talks/Heinz-2020-ML21C-slides.pdf">here</a>)</p>
-            <p>This semester our MathLing meetings will be on Thursdays from 1:30pm to 2:30pm. Our first meeting is this Thursday, January 23rd, 2020 in Room 108.</p> 
-        
+            <p>This semester our MathLing meetings will be on Thursdays from 1:30pm to 2:30pm. The date and venue of our first meeting are below: </p> 
+        <p><b>             <em>Date &amp; Time:</em> </b>Thurs, Jan 23rd, 2020</p>
+        <p><b>            <em> Venue:</em></b> Room 108 at 18 Seminary Pl, New Brunswick, NJ 08901 (Linguistics Department)</p>
+
         <hr>
 
         <h3>Previous meetings</h3>
