made local changes wout update

--- a/mathling/index.html
+++ b/mathling/index.html
@@ -31,32 +31,47 @@
                 <td><a href="http://adamjardine.net">Adam Jardine</a></td> 
             </tr>
             <tr>
-                <td><b>Student organizer:</b></td>
-                <td> <a href="https://dinemamadou.wixsite.com/dinemamadou">Dine Mamadou</a> and </td> 
+                <td rowspan="2"><b>Student organizers:</b></td>
+                <td> <a href="https://dinemamadou.wixsite.com/dinemamadou">Dine Mamadou</a></td> 
+            </tr>
+            <tr>
                 <td> <a href="https://ling.rutgers.edu/people-mainmenu-137/graduate-students-mainmenu-149">Huteng Dai</a></td>
-
+            </tr>
+            <tr>
+                <td colspan="2">
+                    <b><a href="https://drive.google.com/drive/u/1/folders/1_IWGTLM8Jb7mcU5N9HklO8x6V7my3Bw-">Google drive folder</b></a> (requires permission)
+                </td>
             </tr>
         </table>
 
-        <b><a href="https://drive.google.com/drive/u/1/folders/1_IWGTLM8Jb7mcU5N9HklO8x6V7my3Bw-">Google drive folder</b></a> (requires permission)
 
         <hr>
 
         <!-- News/etc -->
-        <h3>Welcome To Our Newest Members!</h3>
+        <!-- <h3>Welcome To Our Newest Members!</h3><!--  --><!--  --><!--  --><!--  -->
 
-        <p>Our Computational and Mathematical Linguistics family is growing with our newest graduate members <b>Natasha Chemey</b> and <b>Tatevik Yolyan </b>(find their bios <a href="https://sites.rutgers.edu/lgsa/meet-our-new-grad-students-2019/">here</a>), and faculty member <b>Adam McCollum </b>(find his personal website <a href="http://idiom.ucsd.edu/~agmccoll/">here</a>). Welcome! and here&#8217;s to a lot of MathLing fun this academic year!</p>
+        <!-- <p>Our Computational and Mathematical Linguistics family is growing with our newest graduate members <b>Natasha Chemey</b> and <b>Tatevik Yolyan </b>(find their bios <a href="https://sites.rutgers.edu/lgsa/meet-our-new-grad-students-2019/">here</a>), and faculty member <b>Adam McCollum </b>(find his personal website <a href="http://idiom.ucsd.edu/~agmccoll/">here</a>). Welcome! and here&#8217;s to a lot of MathLing fun this academic year!</p> -->
 
-        <hr>
+        <!-- <hr> -->
 
-        <p><b>Upcoming Meeting </b>: Fall Meeting 1 (Wed, Sep 4th)
-            <p>This meeting will be in room 204 from 11:30am to 12:30am at 1 Spring St, New Brunswick, NJ on Wednesday, September 4th.</p>
-            <p>MathLing this semester will be merged with our computational linguistics lab meetings, meaning that the meetings will be even more informal than usual, with one or more of us giving updates on our research              (instead of reading and discussing papers).</p>
-            <p>This week, Adam will present on multitape automata, and everyone will get a chance to share what they're working on.</p>
+        <p><b>Upcoming Meetings </b>:</p>
+
+        <b> Spring 2020 schedule</b><br/>
+        All meetings in 108
+            <tr>
+                <td>Date</td> <td>Topic</td> <td>Presenter</td> <td>Notes</td>
+                
+            </tr>
 
         <hr>
 
         <h3>Previous meetings</h3>
+        <p>
+            <b>Fall Meeting 1</b> (Wed, Sep 4th)
+        </p>
+        <p>This meeting will be in room 204 from 11:30am to 12:30am at 1 Spring St, New Brunswick, NJ on Wednesday, September 4th.</p>
+        <p>MathLing this semester will be merged with our computational linguistics lab meetings, meaning that the meetings will be even more informal than usual, with one or more of us giving updates on our research              (instead of reading and discussing papers).</p>
+        <p>This week, Adam will present on multitape automata, and everyone will get a chance to share what they're working on.</p>
 
         <p><b>Spring 2019 Meeting 1</b>: Learning substitutable languages</p>
 <p>In this meeting, we will continue the discussion on learning started last semester. The relevant reading for the meeting is Clark and Eyraud (2007) on learning substitutable languages, which can learn non-regular languages that can model some aspects of syntactic structure.<br />
