--- a/mathling/index.html
+++ b/mathling/index.html
@@ -35,7 +35,7 @@
                 <td> <a href="https://dinemamadou.wixsite.com/dinemamadou">Dine Mamadou</a></td> 
             </tr>
             <tr>
-                <td> <a href="https://ling.rutgers.edu/people-mainmenu-137/graduate-students-mainmenu-149">Huteng Dai</a></td>
+                <td> <a href="http://hutengdai.com">Huteng Dai</a></td>
             </tr>
             <tr>
                 <td colspan="2">
@@ -70,7 +70,7 @@
                 <td>2/13</td> <td> BMRS and composition </td> <td>Chris</td> <td>2-3pm</td>
             </tr>
             <tr>
-                <td>2/20</td> <td> TBD </td> <td></td> <td>2-3pm</td>
+                <td>2/20</td> <td> <a href="https://adamjardine.net/files/bhaskaretalBMRSms.pdf">BMRS and composition </a></td> <td>Chris</td> <td>2-3pm</td>
             </tr>
             <tr>
                 <td>2/27</td> <td>  </td> <td></td> <td>No meeting; open house</td>
