added ND to schedule

--- a/mathling/index.html
+++ b/mathling/index.html
@@ -79,7 +79,7 @@
                 <td>3/5</td> <td> TBD </td> <td></td> <td>2-3pm</td>
             </tr>
             <tr>
-                <td>3/12</td> <td> TBD </td> <td></td> <td></td>
+                <td>3/12</td> <td> TBD </td> <td><a href="https://www.nickdanis.com">Nick Danis</a> (?)</td> <td></td>
             </tr>
             <tr>
                 <td>3/19</td> <td> TBD </td> <td></td> <td></td>
