--- a/mathling/index.html
+++ b/mathling/index.html
@@ -76,7 +76,7 @@
                 <td>2/27</td> <td>  </td> <td></td> <td>No meeting; open house</td>
             </tr>
             <tr>
-                <td>3/5</td> <td> TBD </td> <td></td> <td>2-3pm</td>
+                <td>3/5</td> <td> <a href="http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.131.7593&rep=rep1&type=pdf">PCFG and entropy reduction</a> </td> <td>Brian</td> <td>2-3pm</td>
             </tr>
             <tr>
                 <td>3/12</td> <td> TBD </td> <td><a href="https://www.nickdanis.com">Nick Danis</a> (?)</td> <td></td>
