--- a/mathling/index.html
+++ b/mathling/index.html
@@ -70,7 +70,10 @@
                 <td>2/13</td> <td> BMRS and composition </td> <td>Chris</td> <td>2-3pm</td>
             </tr>
             <tr>
-                <td>2/20</td> <td> <a href="https://adamjardine.net/files/bhaskaretalBMRSms.pdf">BMRS and composition </a></td> <td>Chris</td> <td>2-3pm</td>
+                <td>2/20</td> <td> Open house practice <td>Nate & Dine</td> <td>2-3pm</td>
+            </tr>
+            <tr>
+                <td></td> <td> <a href="https://adamjardine.net/files/bhaskaretalBMRSms.pdf">BMRS and composition </a></td> <td>Chris</td> <td></td>
             </tr>
             <tr>
                 <td>2/27</td> <td>  </td> <td></td> <td>No meeting; open house</td>
