--- a/mathling/index.html
+++ b/mathling/index.html
@@ -82,7 +82,10 @@
                 <td>3/5</td> <td> <a href="http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.131.7593&rep=rep1&type=pdf">PCFG and entropy reduction</a> </td> <td>Brian</td> <td>2-3pm</td>
             </tr>
             <tr>
-                <td>3/12</td> <td> TBD </td> <td><a href="https://www.nickdanis.com">Nick Danis</a> (?)</td> <td></td>
+                <td>3/12</td> <td> PLC practice talks </td> <td><del>Nick Danis</del></td> <td>1:30-3pm</td>
+            </tr>
+            <tr>
+                <td></td><td></td><td>Shiori, Wenyue</td><td></td>
             </tr>
             <tr>
                 <td>3/19</td> <td> TBD </td> <td></td> <td></td>
