--- a/mathling/index.html
+++ b/mathling/index.html
@@ -61,6 +61,10 @@
 
         <p><b>Upcoming Meetings </b>:</p>
         <b> Spring 2020 schedule</b><br/>
+        <p><b> *Update, 3/12/2020: All meetings are postponed until further notice due to university's emergency COVID-19 policy on in-person meetings.*</b><br>
+            Any updates will be posted here and through the mailing list. 
+        </p>
+
         All meetings Thurs at 1:30pm -- 2:30pm in 108, 18 Seminary Pl, unless otherwise noted<br/>
         <table>
             <tr>
@@ -82,13 +86,10 @@
                 <td>3/5</td> <td> <a href="http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.131.7593&rep=rep1&type=pdf">PCFG and entropy reduction</a> </td> <td>Brian</td> <td>2-3pm</td>
             </tr>
             <tr>
-                <td>3/12</td> <td> PLC practice talks </td> <td><del>Nick Danis</del></td> <td>1:30-3pm</td>
+                <td>3/12</td> <td><del>PLC practice talks</del></td> <td><del>Nick Danis</del></td> <td>Cancelled due to COVID-19 quarantine</td>
             </tr>
             <tr>
-                <td></td><td></td><td>Shiori, Wenyue</td><td></td>
-            </tr>
-            <tr>
-                <td>3/19</td> <td> TBD </td> <td></td> <td></td>
+                <td></td><td></td><td><del>Shiori, Wenyue</del></td><td></td>
             </tr>
         </table>
 
